maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:17: error: value += is not a member of Int
    cpt+=1
       ^PledgeMaze:21: error: value += is not a member of Int
    cpt+=1
       ^PledgeMaze:25: error: value += is not a member of Int
    cpt+=1
       ^PledgeMaze:29: error: value -= is not a member of Int
  cpt-=1
     ^PledgeMaze:32: error: not found: type dir
def isDirectionFree(direction:dir){
                              ^PledgeMaze:34: error: not found: value dir
  while(getDirection!=dir){
                      ^PledgeMaze:43: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^PledgeMaze:43: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return false
    ^PledgeMaze:50: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^PledgeMaze:50: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return true
    ^